<resources>
    <string name="app_name">Kourse</string>
    <string name="facebook_app_id">2187197791347876</string>
    <string name="fb_login_protocol_scheme">fb2187197791347876</string>
    <string name="gglogin">Sign in with Google</string>
    <string name="fline">Welcome to Kourse !</string>
    <string name="sline">The easy way to manage your courses</string>
    <string name="tline">with many management tools</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="add_course_title">Add course</string>
    <string name="add_course_name">Course name</string>
    <string name="add_course_total">Total hours</string>
    <string name="add_course_due">Due date payment</string>
    <string name="add_course_pay">Payment amount</string>
    <string name="add_course_time">Course time</string>
    <string name="add_course_color">Color</string>
    <string name="add_course_ok">Add</string>
    <string name="reminder_title">Reminder</string>
    <string name="profile_add_person">add person</string>
    <string name="profile_ok">OK</string>
    <string name="profile_cancel">Cancel</string>
    <string name="email">Email</string>

    <string name="add_reminder_info">Info</string>
    <string name="add_reminder_Date">Date</string>
    <string name="add_reminder_Time">Time</string>

    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>
    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>
    <string name="editor_insert_reminder_successful">Reminder saved</string>
    <string name="editor_insert_reminder_failed">Error with saving reminder</string>
    <string name="editor_update_reminder_successful">Reminder updated</string>
    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="rename">Rename</string>
    <string name="u"><![CDATA[<]]></string>
    <string name="start_date">Start date</string>


</resources>