<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddKourseActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorAccent"
        android:elevation="4dp"
        app:title="@string/add_course_title"
        app:titleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <!-- name -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_name"
            android:fontFamily="@font/aqua"/>
        <EditText
            android:id="@+id/add_name_edittext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>

    <!-- total -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_total"
            android:fontFamily="@font/aqua"/>
        <EditText
            android:id="@+id/add_total_edittext"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="number"/>
    </LinearLayout>

    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>

    <!-- time -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_time"
            android:fontFamily="@font/aqua"/>
        <EditText
            android:id="@+id/add_time_edittext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>

    <!-- pay amount -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_pay"
            android:fontFamily="@font/aqua"/>
        <EditText
            android:id="@+id/add_pay_edittext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>


    <!-- due -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_due"
            android:fontFamily="@font/aqua"/>
        <EditText
            android:id="@+id/add_due_edittext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="7dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>


    <!-- color -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_course_color"
            android:fontFamily="@font/aqua"/>
        <Button
            android:id="@+id/add_blue_button"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/round_blue_butt"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
        <Button
            android:id="@+id/add_green_button"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/round_green_butt"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
        <Button
            android:id="@+id/add_yellow_button"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/round_yellow_butt"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
        <Button
            android:id="@+id/add_red_button"
            android:layout_gravity="center_vertical"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/round_red_butt"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"/>
    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_list"/>



    <Button
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/add_course_ok"
        android:textColor="@color/white"
        android:onClick="addButtonClicked"
        android:background="@drawable/radius_blue_butt"/>


</LinearLayout>