<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center">

    <!--<ImageView-->
        <!--android:layout_width="60dp"-->
        <!--android:layout_height="60dp"-->
        <!--android:src="@drawable/add_user"/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Course"
        android:textStyle="bold"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- name -->
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_name"
                />
            <EditText
                android:layout_weight="1"
                android:background="@null"
                android:id="@+id/add_name_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_list"/>

        <!-- total -->
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_total"
                />
            <EditText
                android:layout_weight="1"
                android:background="@null"
                android:id="@+id/add_total_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:inputType="number"/>
        </LinearLayout>

        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_list"/>

        <!-- time -->
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_time"
                />
            <EditText
                android:layout_weight="1"
                android:background="@null"
                android:id="@+id/add_time_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_list"/>

        <!-- pay amount -->
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_pay"
                />
            <EditText
                android:layout_weight="1"
                android:background="@null"
                android:id="@+id/add_pay_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_list"/>


        <!-- due -->
        <LinearLayout
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_due"
                />
            <EditText
                android:layout_weight="1"
                android:background="@null"
                android:id="@+id/add_due_edittext"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <View
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_list"/>


        <!-- color -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course_color"
                />
            <Button
                android:id="@+id/add_blue_button"
                android:layout_gravity="center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/round_blue_butt"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"/>
            <Button
                android:id="@+id/add_green_button"
                android:layout_gravity="center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/round_green_butt"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"/>
            <Button
                android:id="@+id/add_yellow_button"
                android:layout_gravity="center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/round_yellow_butt"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"/>
            <Button
                android:id="@+id/add_red_button"
                android:layout_gravity="center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/round_red_butt"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"/>

            <!--<ImageButton-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:src="@drawable/stamp_unselect"-->
                <!--android:backgroundTint="null"-->
                <!--android:scaleType="fitCenter"-->
                <!--android:adjustViewBounds="true"/>-->

            <!--<Button-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:text="1"-->
                <!--android:background="@drawable/stamp_unselect"/>-->
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/home_btn_cancel"
            android:layout_marginTop="5dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_cancel"
            android:textAllCaps="false"
            android:background="@null"/>
        <Button
            android:id="@+id/home_btn_ok"
            android:layout_marginTop="5dp"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_ok"
            android:textAllCaps="false"
            android:background="@null"/>
    </LinearLayout>


</LinearLayout>